2008-07-29  Miguel Sofer  <msofer@users.sf.net>

	* generic/tcl.decls:     Completely revamped NRE implementation,
	* generic/tclBasic.c:    with (almost) unchanged API.
	* generic/tclCompile.h:
	* generic/tclExecute.c:  TEBC will require a bit of a facelift,
	* generic/tclInt.decls:  but TEOV at least looks great now. 
	* generic/tclInt.h:      There are new tests (incomplete!) to verify
	* generic/tclInterp.c:   that execution is indeed in the same TEBC
	* generic/tclNRE.h:      instance, at the same level in all stacks
	* generic/tclNamesp.c:   involved. Tailcalls are still a bit leaky,
	* generic/tclOOBasic.c:  still deserving to be in tcl::unsupported.
	* generic/tclOOMethod.c:
	* generic/tclProc.c:     Uninit'd var warnings in TEBC with -O2, no
	* generic/tclTest.c:     warnings otherwise.

2007-07-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/FileSystem.3:        CONSTified many functions using Tcl_FileSystem
	* generic/tcl.decls:       which all are supposed to be a constant, but
	* generic/tclDecls.h:      this was not reflected in the API:
	* generic/tclFileSystem.h:    Tcl_FSGetInternalRep
	* generic/tclIOUtil.c:        Tcl_FSNewNativePath, Tcl_FSData
	* generic/tclPathObj.c:	      Tcl_FSRegister, Tcl_FSUnregister
	* generic/tclTest.c:	      Tcl_FSGetFileSystemForPath ...
	This change complies with TIP #27.
	***POTENTIAL INCOMPATIBILITY***

2008-07-28  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c: Added missing ref count when creating an
	empty string as path (TclEvalEx). In 8.4 the missing code caused
	panics in the testsuite. It doesn't in 8.5. I am guessing that the
	code path with the missing the incr-refcount is not invoked any
	longer. Because the bug in itself is certainly the same.

2008-07-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOOMethod.c (PushMethodCallFrame): Remove hack that should
	have gone when this code was merged into Tcl.

2007-07-27  Jan Nijtmans  <nijtmans@users.sf.net>
