@@ -1,5 +1,9 @@
 2008-07-29  Miguel Sofer  <msofer@users.sf.net>
 
+	* generic/tclExecute.c:  fix [Bug 2030670] that cause
+	TclStackRealloc to panic on rare corner cases. Thx ajpasadyn for
+	diagnose and patch.
+
 	* generic/tcl.decls:     Completely revamped NRE implementation,
 	* generic/tclBasic.c:    with (almost) unchanged API.
 	* generic/tclCompile.h:
